# kanso

./: .gitignore  Cargo.toml  README.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml
apps/KansoMac/: Package.swift  README.md
apps/KansoMac/KansoMac/: ContentView.swift  InkCanvas.swift  KansoMacApp.swift  KansoStore.swift  MarkdownPreviewView.swift  Theme.swift  kanso_ffi.swift
apps/KansoMac/KansoMac.xcodeproj/: project.pbxproj
apps/KansoMac/KansoMacTests/: KansoMacTests.swift
apps/KansoMac/KansoMacUITests/: KansoMacUITests.swift  KansoMacUITestsLaunchTests.swift
apps/KansoMac/Sources/KansoMac/: ContentView.swift  KansoApp.swift  KansoStore.swift  kanso_ffi.swift
apps/KansoMac/Sources/kanso_ffiFFI/: shim.c
apps/KansoMac/Sources/kanso_ffiFFI/include/: kanso_ffiFFI.h  module.modulemap
apps/kanso-cloud-cf/: README.md  package-lock.json  package.json  wrangler.jsonc
apps/kanso-cloud-cf/migrations/: 0001_init.sql  0002_sharing.sql  0003_share_member_email.sql
apps/kanso-cloud-cf/src/: index.ts
crates/kanso-client/: Cargo.toml
crates/kanso-client/src/: lib.rs
crates/kanso-client/tests/: sync_over_http.rs
crates/kanso-cloud/: Cargo.toml
crates/kanso-cloud/migrations/: 0001_events.sql  0002_accounts.sql
crates/kanso-cloud/src/: accounts.rs  auth.rs  blobs.rs  dto.rs  lib.rs  main.rs  store.rs
crates/kanso-crypto/: Cargo.toml
crates/kanso-crypto/src/: lib.rs
crates/kanso-engine/: Cargo.toml
crates/kanso-engine/migrations/: 0001_init.sql  0002_skills.sql  0003_mcp.sql  0004_sharing.sql
crates/kanso-engine/src/: attachments.rs  db.rs  error.rs  import_export.rs  lib.rs  markdown.rs  mcp_access.rs  notebooks.rs  notes.rs  queries.rs  remote.rs  revisions.rs  sharing.rs  sketches.rs  skills.rs  sync.rs  sync_client.rs  tags.rs
crates/kanso-engine/src/models/: apply.rs  attachment.rs  io.rs  mcp_client.rs  mod.rs  note.rs  note_link.rs  notebook.rs  revision.rs  share.rs  sketch.rs  skill.rs  sync_report.rs  tag.rs  task_item.rs
crates/kanso-ffi/: Cargo.toml
crates/kanso-ffi/src/: lib.rs
crates/kanso-ink/: Cargo.toml
crates/kanso-ink/src/: format.rs  geometry.rs  gpu.rs  lib.rs  raster.rs  tessellate.rs
crates/kanso-mcp/: Cargo.toml
crates/kanso-mcp/src/: lib.rs  main.rs
crates/kanso-types/: Cargo.toml
crates/kanso-types/src/: auth.rs  ids.rs  lib.rs  payloads.rs  sync.rs
script/: build_and_run.sh
scripts/: build-apple-bindings.sh
