[package]
name = "kanso-client"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kanso-engine.workspace = true
kanso-types.workspace = true
reqwest.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
kanso-cloud = { path = "../kanso-cloud" }
actix-web.workspace = true
actix-test = "0.1"
tokio.workspace = true
