[package]
name = "kanso-cloud"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "kanso-cloud"
path = "src/main.rs"

[dependencies]
kanso-types.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
