[package]
name = "kanso-cloud"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kanso_cloud"
path = "src/lib.rs"

[[bin]]
name = "kanso-cloud"
path = "src/main.rs"

[dependencies]
kanso-types.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
actix-governor = "0.8"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
async-trait.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid"] }

[dev-dependencies]
tokio.workspace = true
