[package]
name = "kanso-crypto"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true, features = ["std"] }
argon2.workspace = true
zeroize.workspace = true
thiserror.workspace = true
