[package]
name = "kanso-engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kanso-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
comrak.workspace = true
kanso-ink.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
