[package]
name = "kanso-ffi"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
kanso-engine.workspace = true
uniffi = { workspace = true, features = ["cli"] }
tokio = { workspace = true }
pollster.workspace = true
thiserror.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = []
