[package]
name = "kanso-ffi"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
kanso-client = { path = "../kanso-client" }
kanso-crypto.workspace = true
kanso-engine.workspace = true
kanso-ink.workspace = true
kanso-types.workspace = true
uniffi = { workspace = true, features = ["cli"] }
tokio = { workspace = true }
pollster.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = []
