[package]
name = "kanso-mcp"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kanso_mcp"
path = "src/lib.rs"

[[bin]]
name = "kanso-mcp"
path = "src/main.rs"

[dependencies]
kanso-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
